--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 <i> Student at the University of Central Florida </i>
 <p>    
 <br>
-I am currently a junior majoring in Interdisciplinary General Studies, with a focus on Computer Science and Information Technology. I am hoping to pursue a minor in Computer Science.
+I am currently majoring in Interdisciplinary General Studies, with a focus on Computer Science and Information Technology. I am hoping to pursue a minor in Computer Science.
 </p>
 <h2> Relevant Coursework </h2>  
     <p> Computer Science I, Computer Organization & Logic, Intro to Programming Concepts, C Programming, Java Programming, and Advanced Java Programming
