--- a/game.html
+++ b/game.html
@@ -11,8 +11,8 @@ title: Digital Narrative Project
   
 </head>
 <body>
-<h1> My Digital Narrative </h1>
-<p> Here, you can include the link to your game, or embed it directly in the HTML page (different options are easier depending on the tool you chose for your narrative). </p>
+<h1><a href="/DIG3171/DigitalNarrative.html"> My Digital Narrative </a> </h1>
+<p> Click above to see my Twine Demo! </p>
 
   <h1> Abstract </h1>
   <p>Here is where you can paste your abstract. I strongly suggest writing it with a word processing tool that checks spelling for you, as Github does not do this (please let me know if you see typos on this page!) The Works Cited page won't appear as a separate page <i>here</i> but that's okay. </p>
