--- a/game.html
+++ b/game.html
@@ -14,8 +14,6 @@ title: Digital Narrative Project
 <h1><a href="/DIG3171/DigitalNarrative.html"> My Digital Narrative </a> </h1>
 <p> Click above to see my Twine Demo! </p>
 
-  <h1> Abstract </h1>
-  <p>Here is where you can paste your abstract. I strongly suggest writing it with a word processing tool that checks spelling for you, as Github does not do this (please let me know if you see typos on this page!) The Works Cited page won't appear as a separate page <i>here</i> but that's okay. </p>
 
 
 <style>
@@ -29,11 +27,9 @@ title: Digital Narrative Project
 <h1>Works Cited</h1>
 
 <p class="works-cited">
-  Lastname, Firstname <em>Book Title</em>. Press, 2025.
+  Medical Council on Alcoholism, issuing body. Alcohol and Alcoholism (Oxford, England : Online). Oxford] ; [Pergamon Press], 1983. Print.
 </p>
 
-<p class="works-cited">
-  Doe, Jane. "Journal Article.” <em>Journal Name</em>, vol. 15, no. 2, 2025, pp. 45–67.
-</p>
+
 
   
