--- a/tracery.html
+++ b/tracery.html
@@ -127,53 +127,54 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
         </div>
     <script> /* In the var immediately below, copy-paste your Tracery/CBDQ JSON between the {} brackets */
     var obj = {
-      
-"origin": [
-"Every year the NOAA releases an Arctic report card. Researchers can use #methods# to understand the #observations#. Through this, they are able to learn more about the environment that houses the #description# living in the Arctic. Hunters in the Arctic provide observations of #observations# to researchers. By using their knowledge of the Arctic, such as #knowledge#, the education of this made possible through research #initiatives#. With climate change warming the Arctic, the seal population such as #seal# seals are effected."
-],
-"description": [
-"animals",
-"species",
-"fauna",
-"residents",
-"creatures"
-],
-"methods": [
-"observations",
-"data collection",
-"evaluation and analysis",
-"communication",
-"equipment",
-"adapting tools"
-],
-"knowledge": [
-"harvesting",
-"safe ice travel",
-"butchering",
-"food preparation",
-"transport"
-],
-"observations": [
-"ice",
-"snow",
-"weather",
-"wind",
-"storms",
-"vegetation"
-],
-"initiatives": [
-"infrastructure",
-"funding",
-"recognition",
-"production",
-"teaching"
-],
-"seal":[
-"ringed (Pusa hispida)",
-"spotted (Phoca largha)",
-"bearded (Erignathus barbatus)",
-"ribbon (Histriophoca fasciata)"
-]
+	
+	"description": [
+		"animals",
+		"species",
+		"fauna",
+		"residents",
+		"creatures"
+	],
+	"methods": [
+		"observations",
+		"data collections",
+		"evaluation and analysis",
+		"communication",
+		"equipment",
+		"adapting tools"
+	],
+	"knowledge": [
+		"harvesting",
+		"safe ice travel",
+		"butchering",
+		"food preparation",
+		"transport"
+	],
+	"initiatives": [
+		"infrastructure",
+		"funding",
+		"recognition",
+		"production",
+		"teaching"
+	],
+	"seal": [
+		"ringed (Pusa hispida)",
+		"spotted (Phoca largha)",
+		"bearded (Erignathus barbatus)",
+		"ribbon (Histriophoca fasciata)"
+	],
+	"observations": [
+		"ice",
+		"snow",
+		"weather",
+		"wind",
+		"storms",
+		"vegetation"
+	],
+	"origin": [
+		"Every year the NOAA releases an Arctic report card. Researchers can use #methods# to understand the #observations#. Through this, they are able to learn more about the environment that houses the #description# living in the Arctic. Hunters in the Arctic provide observations of #observations# to researchers. By using their knowledge of the Arctic, such as #knowledge#, the education of this made possible through research #initiatives#. With climate change warming the Arctic, the seal population such as #seal# seals are effected."
+	]
+
 }
 function generateString(rule) {
   return expandRule(rule);
